Small CSS fix for fixing top and bottom margins of page's content, page content is now wrapped inside the content div
Former-commit-id: bef4ecc4227cf49c8e094c074b5049a7484cff28
Former-commit-id: b7487de478553d4401cd40057256693e95dc8ef3

--- a/src/main/webapp/css/webapp.css
+++ b/src/main/webapp/css/webapp.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-flow: column;
 }
-.container {
+.content {
     margin-top: 30px;
     margin-bottom: 15px;
 }
